kubernetes/apps/mimir-system/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: _
  labels:
    istio.io/dataplane-mode: ambient
    name: mimir-system
    pod-security.kubernetes.io/enforce: privileged
